<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jamescoughlin.myappportfolio.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp">

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/titleMain"
            android:layout_column="0"
            android:gravity="center_horizontal"
            android:id="@+id/textView"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/popularMovies"
            android:layout_column="0"
            android:onClick="popularMoviesButtonClicked"
            android:id="@+id/popularMoviesButton"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/stockHawk"
            android:layout_column="0"
            android:onClick="stockHawkButtonClicked"
            android:id="@+id/stockHawkButton"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/buildItBigger"
            android:layout_column="0"
            android:onClick="buildItBiggerButtonClicked"
            android:id="@+id/buildItBiggerButton"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/makeYourAppMaterial"
            android:layout_column="0"
            android:onClick="makeYourAppMaterialButtonClicked"
            android:id="@+id/makeYourAppMaterialButton"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/goUbiquitous"
            android:layout_column="0"
            android:onClick="goUbiquitousButtonClicked"
            android:id="@+id/goUbiquitousButton"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/captone"
            android:layout_column="0"
            android:onClick="captoneButtonClicked"
            android:id="@+id/captoneButton"
            />
    </TableRow>
</TableLayout>
